# fraud-onboarding-score

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: cd.yml  ci.yml  model_retraining.yml
configs/: feature_config.yaml  model_config.yaml
docker/: Dockerfile.api  docker-compose.yml
docs/: model_card.md
docs/architecture/adr/: ADR-001-model-choice.md  ADR-002-feature-store.md
docs/lgpd/: data_map.md
notebooks/: 05_shap_analysis.ipynb
scripts/: evaluate_model.py  generate_synthetic_data.py  train_model.py
src/: __init__.py
src/api/: lifespan.py  main.py
src/api/routers/: health.py  score.py
src/data/: validators.py
src/data/generators/: __init__.py  customer_generator.py
src/decision/: __init__.py  engine.py
src/features/: __init__.py  pipeline.py  store.py
src/models/: persistence.py  score_transformer.py
src/models/baseline/: __init__.py
src/models/champion/: __init__.py  lgbm_model.py  shap_explainer.py
src/providers/: base_provider.py  biometric_provider.py  dict_bacen_provider.py
src/utils/: crypto.py  logger.py  metrics.py
tests/: conftest.py
tests/integration/: test_api_endpoints.py  test_latency.py
tests/unit/: test_data_generator.py  test_decision_engine.py  test_feature_store.py  test_features.py  test_model_components.py  test_utils_and_providers.py
