[tool.poetry]
name = "fraud-onboarding-score"
version = "0.1.0"
description = "Sistema de score antifraude para onboarding bancário"
authors = ["Data Science — Prevenção a Fraudes"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
# API
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
pydantic = "^2.7.0"
# ML
lightgbm = "^4.3.0"
xgboost = "^2.0.3"
catboost = "^1.2.5"
scikit-learn = "^1.5.0"
shap = "^0.45.0"
# Data
pandas = "^2.2.0"
polars = "^0.20.0"
numpy = "^1.26.0"
scipy = "^1.13.0"
# Data generation
faker = "^25.0.0"
# MLOps
mlflow = "^2.13.0"
evidently = "^0.4.30"
# Feature store
redis = "^5.0.0"
# Storage
boto3 = "^1.34.0"
# HTTP client (provider mocks → real)
httpx = "^0.27.0"
# Config
pyyaml = "^6.0.1"
python-dotenv = "^1.0.1"
# Security
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
passlib = "^1.7.4"
# Logging
structlog = "^24.1.0"
# Validation
great-expectations = "^0.18.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.23.0"
httpx = "^0.27.0"
ruff = "^0.4.0"
black = "^24.4.0"
isort = "^5.13.0"
mypy = "^1.10.0"
bandit = "^1.7.8"
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "RET", "SIM"]
ignore = ["S101", "S608"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src --cov-report=html --cov-report=term-missing --cov-fail-under=75"
